# e62rs

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  e62rs.default.json  e62rs.default.toml  e62rs.toml  e6cfg-schema.json  index.html  rustfmt.toml  verup.py
.cargo/: config.toml
benches/: utils_bench.rs
crates/e62rs/: Cargo.toml  README.md
crates/e62rs/src/: main.rs
crates/e6cfg/: Cargo.toml  e62rs.default.toml  e6cfg-schema.json
crates/e6cfg/src/: blacklist.rs  defaults.rs  lib.rs  main.rs
crates/e6core/: Cargo.toml
crates/e6core/src/: display.rs  formatting.rs  image.rs  lib.rs  macros.rs  models.rs  utils.rs
crates/e6core/src/client/: cache.rs  mod.rs  pools.rs  post_cache.rs  posts.rs
crates/e6core/src/data/: mod.rs  pools.rs  tags.rs
crates/e6srv/: Cargo.toml  index.html
crates/e6srv/src/: cfg.rs  lib.rs  media.rs  routes.rs  server.rs  theme.rs
crates/e6ui/: Cargo.toml
crates/e6ui/src/: lib.rs  progress.rs
crates/e6ui/src/ui/: blacklist.rs  download.rs  explorer.rs  menus.rs  mod.rs  reorganize.rs  search.rs  view.rs
data/: tags.csv.hash
resources/: e62rs.default.toml
resources/gallery/: index.html  script.js  script.ts  styles.css
scripts/: editrand.nu
src/: app.rs  batch.rs  cli.rs  client.rs  config.rs  error.rs  formatting.rs  lib.rs  macros.rs  main.rs  models.rs  pool_db.rs  posts.json  progress.rs  tag_db.rs  utils.rs
src/app/: cli.rs  core.rs  interrupt.rs  logging.rs  mod.rs
src/app/handlers/: main_menu.rs  mod.rs  search.rs
src/cache/: mod.rs  posts.rs  stats.rs
src/client/: mod.rs  pools.rs  posts.rs
src/config/: blacklist.rs  format.rs  instance.rs  mod.rs  options.rs  validate.rs
src/config/messages/: builder.rs  config.rs  context.rs  error.rs  mod.rs  template.rs
src/data/: history.rs  mod.rs  pools.rs  tags.rs
src/derive/: Cargo.toml  README.md
src/derive/src/: lib.rs
src/display/: dtext.rs  error.rs  image.rs  mod.rs  models.rs
src/display/dtext/: color.rs  mod.rs  parser.rs  script.rs
src/display/image/: animation.rs  dimensions.rs  encoder.rs  mod.rs  processor.rs  source.rs
src/serve/: cfg.rs  mod.rs  routes.rs  server.rs
src/serve/api/: mod.rs
src/serve/api/handlers/: data.rs
src/serve/media/: filter.rs  gallery.rs  item.rs  metadata.rs  mod.rs  scanner.rs  stats.rs  types.rs
src/serve/theme/: metadata.rs  mod.rs  palette.rs  presets.rs  registry.rs
src/ui/: autocomplete.rs  download.rs  menus.rs  mod.rs  progress.rs  themes.rs  view.rs
src/ui/menus/: blacklist.rs  download.rs  explore.rs  explorer.rs  reorganize.rs  search.rs  view.rs
