[package]
name = "e62rs"
version = "1.4.0"
edition = "2024"
description = "An in-terminal E621/926 browser."
license-file = "LICENSE"
categories = ["command-line-interface"]
readme = "README.md"
homepage = "https://github.com/TheBearodactyl/e62rs"
repository = "https://github.com/TheBearodactyl/e62rs"
keywords = ["e621", "e926", "tui", "browser"]

[workspace]
members = ["src/derive"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
config = "0.15.19"
crossterm = "0.29.0"
csv = "1.4.0"
ctrlc = "3.5.2"
dirs = "6.0.0"
flate2 = "1.1.9"
futures = "0.3.32"
futures-util = "0.3.32"
hashbrown = { version = "0.16.1", features = ["serde"] }
hex = "0.4.3"
icy_sixel = "0.5.0"
image = "0.25.10"
indicatif = "0.18.4"
jwalk = "0.8.1"
lazy_static = "1.5.0"
mimalloc = { version = "0.1.48", features = ["v3"] }
nucleo-matcher = "0.3.1"
num_cpus = "1.17.0"
once_cell = "1.21.3"
open = "5.3.3"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
postcard = { version = "1.1.3", features = ["alloc"] }
radix_trie = "0.3.0"
rand = "0.10.0"
rapidfuzz = "0.5.0"
rayon = "1.11.0"
redb = "3.1.1"
rocket = { version = "0.5.1", features = ["json"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
smart-default = "0.7.1"
strip-ansi-escapes = "0.2.1"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
urlencoding = "2.1.3"
qrcode = "0.14.1"
bearive = { version = "0.1.0" }
miette = { version = "7.6.0", features = ["fancy"] }
macroni-n-cheese = "0.1.7"
ctor = "0.6.3"
boundbook = "0.3.21"

[dependencies.bearask]
version = "0.4.0"

[dependencies.reqwest]
version = "0.13.2"
features = ["blocking", "json", "stream"]

[profile.release]
strip = true

[profile.dev]
strip = true

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio", "html_reports"] }
tempfile = "3.26.0"

[[bench]]
name = "utils_bench"
harness = false
