[package]
name = "e62rs"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A highly configurable CLI e926/e621 browser"
homepage = "https://github.com/thebearodactyl/e62rs"
repository = "https://github.com/thebearodactyl/e62rs"
readme = "README.md"
keywords = ["tui", "e621", "e926"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
e6cfg = { version = "0.1.0", path = "../e6cfg" }
e6core = { version = "0.1.0", path = "../e6core" }
e6ui = { version = "0.1.0", path = "../e6ui" }
env_logger = "0.11.8"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
