[package]
name = "e62rs"
version = "0.4.1"
edition = "2024"
license = "MIT"
description = "A highly configurable CLI e926/e621 browser"
homepage = "https://github.com/thebearodactyl/e62rs"
repository = "https://github.com/thebearodactyl/e62rs"
readme = "README.md"
keywords = ["tui", "e621", "e926"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
e6cfg = { path = "../e6cfg" }
e6core = { path = "../e6core" }
e6ui = { path = "../e6ui" }
env_logger = "0.11.8"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
