[package]
name = "e6cfg"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
config = "0.15.16"
dirs = "6.0.0"
log = "0.4.28"
schemars = "1.0.4"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.7"
