[package]
name = "e6core"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bincode = { version = "2.0", features = ["serde"] }
chrono = "0.4.42"
csv = "1.3.1"
e6cfg = { path = "../e6cfg" }
flate2 = "1.1.2"
futures = "0.3.31"
hex = "0.4.3"
icy_sixel = "0.1.3"
image = "0.25.8"
log = "0.4.28"
owo-colors = "4.2.2"
rapidfuzz = "0.5.0"
redb = "3.1.0"
reqwest = { version = "0.12.23", features = [
    "json",
    "stream",
    "gzip",
    "brotli",
    "deflate",
] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"
