[package]
name = "e6srv"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
e6cfg = { path = "../e6cfg" }
jwalk = "0.8.1"
log = "0.4.28"
num_cpus = "1.17.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
walkdir = "2.5.0"
