[package]
name = "e6ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
e6cfg = { version = "0.1.0", path = "../e6cfg" }
e6core = { version = "0.1.0", path = "../e6core" }
futures-util = "0.3.31"
indicatif = { version = "0.18.0", features = ["tokio"] }
inquire = { git = "https://github.com/thebearodactyl/inquire", version = "0.9.1" }
inquire-derive = { git = "https://github.com/thebearodactyl/inquire", version = "0.9.1" }
log = "0.4.28"
open = "5.3.2"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json", "stream", "gzip", "brotli", "deflate"] }
tokio = { version = "1.47.1", features = ["full"] }
