[package]
name = "e6ui"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
e6cfg = { path = "../e6cfg" }
e6core = { path = "../e6core" }
futures-util = "0.3.31"
indicatif = { version = "0.18.0", features = ["tokio"] }
inquire = { git = "https://github.com/thebearodactyl/inquire", version = "0.9.1", features = [
    "editor",
] }
inquire-derive = { git = "https://github.com/thebearodactyl/inquire", version = "0.9.1" }
lazy_static = "1.5.0"
open = "5.3.2"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = [
    "json",
    "stream",
    "gzip",
    "brotli",
    "deflate",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
url = "2.5.7"
walkdir = "2.5.0"
